--- a/web/add_data.html
+++ b/web/add_data.html
@@ -10,37 +10,30 @@
 </head>
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg bg-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"><b>Block Data</b></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarScroll">
-            <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./add_data.html">Add Data</a>
-              </li>
-            </ul>
-          </div>
+          <a class="navbar-brand" href="./index.html" style="color: white;"><b>BlockData</b></a>
         </div>
-      </nav>
-    
+    </nav>
 
     <div class="main_container">
 
         <div class="txn">
             <div class="txn_">
-                <label for="txn_hash">Enter <b>Testnet</b> Transaction Hash</label>
+                <label for="txn_hash" class="txn_head"><b> Add Your Data </b></label>
             </div>
             <div class="txn_">
-                <input type="text" id="txn_hash" name="fname" size="25%" value="c3a3bb1cefd8be279334e5c3573e243e9253e9dedf0ee613d669896ded1a8ecd">
+                <p class="txn_value"> ID : </p>
+                <input type="text" id="txn_hash_1" name="fname" size="25%" value="">
+                <p class="txn_value"> Name : </p>
+                <input type="text" id="txn_hash_2" name="fname" size="25%" value="">
+                <p class="txn_value"> Location : </p>
+                <input type="text" id="txn_hash_3" name="fname" size="25%" value="">
+                <p class="txn_value"> Status : </p>
+                <input type="text" id="txn_hash_4" name="fname" size="25%" value="">
             </div>
             <div class="txn_">
-                <button class="button_" type="button" onclick="show()">Submit</button>
+                <button class="button_" type="button" onclick="upload()">Add</button>
             </div>
         </div>
 
@@ -52,10 +45,13 @@
 
     </div>
 
+    
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
     <script src="script.js"></script>
-    <script src="main.js"></script>
+    <script type="module" src="main.js"></script>
+    <script src="bundle.js"></script>
 </body>
 </html>
