--- a/web/add_data.html
+++ b/web/add_data.html
@@ -12,7 +12,7 @@
 
     <nav class="navbar navbar-expand-lg bg-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="./index.html" style="color: white;"><b>BlockData</b></a>
+          <a class="navbar-brand" href="#" style="color: white;"><b>BlockData</b></a>
         </div>
     </nav>
 
@@ -51,7 +51,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
     <script src="script.js"></script>
-    <script type="module" src="main.js"></script>
+    <!-- <script type="module" src="main.mjs"></script> -->
     <script src="bundle.js"></script>
 </body>
 </html>
