--- a/web/index.html
+++ b/web/index.html
@@ -40,7 +40,7 @@
                 <input type="text" id="txn_hash" name="fname" size="25%" value="c3a3bb1cefd8be279334e5c3573e243e9253e9dedf0ee613d669896ded1a8ecd">
             </div>
             <div class="txn_">
-                <button class="button_" type="button" onclick="show()">Submit</button>
+                <button class="button_" type="button" onclick="show(0)">Submit</button>
             </div>
         </div>
 
